@@ -68,9 +68,11 @@ extern "C" {
  *             - added this version number to snapshots (as attribute)
  *             - added R version number to snapshots (as attribute)
  *             - added pkgName to graphics system state info (as attribute)
+ * Version 12: For R 3.4.0
+ *             Added canGenIndle, doIdle() and doesIdle() to devices.
  */
 
-#define R_GE_version 11
+#define R_GE_version 12
 
 int R_GE_getVersion(void);
 
