@@ -17,6 +17,7 @@ form of a mouse or keyboard event.
 getGraphicsEvent(prompt = "Waiting for input",
                  onMouseDown = NULL, onMouseMove = NULL,
                  onMouseUp = NULL, onKeybd = NULL,
+                 onIdle = NULL,
                  consolePrompt = prompt)
 setGraphicsEventHandlers(which = dev.cur(), ...)
 getGraphicsEventEnv(which = dev.cur())
@@ -29,6 +30,7 @@ setGraphicsEventEnv(which = dev.cur(), env)
   \item{onMouseMove}{a function to respond to mouse movement}
   \item{onMouseUp}{a function to respond to mouse button releases}
   \item{onKeybd}{a function to respond to key presses}
+  \item{onIdle}{a function to call when no events are pending}
   \item{consolePrompt}{prompt to be displayed to the user in the console}
   \item{which}{which graphics device does the call apply to?}
   \item{...}{items including handlers to be placed in the event environment}
@@ -36,11 +38,12 @@ setGraphicsEventEnv(which = dev.cur(), env)
 }
 \details{
 These functions allow user input from some graphics devices (currently
-only the \code{windows()} and \code{X11(type = "Xlib")} screen displays
+only the \code{windows()}, \code{X11(type = "Xlib")}
+and \code{X11(type = "cairo")} screen displays
 in base \R{}). Event handlers may be installed to respond to events
 involving the mouse or keyboard.
 
-The functions are related as follows.  If any of the first five
+The functions are related as follows.  If any of the first six
 arguments to \code{getGraphicsEvent} are given, then it uses those
 in a call to \code{setGraphicsEventHandlers} to replace any existing
 handlers in the current device.  This is for compatibility with pre-2.12.0 \R{}
@@ -53,8 +56,9 @@ for use later.
 
 The names of the arguments in \code{getGraphicsEvent} are special.  When
 handling events, the graphics system will look through the event
-environment for functions named \code{onMouseDown}, \code{onMouseMove}, \code{onMouseUp}
-and \code{onKeybd} and use them as event handlers.  It will use
+environment for functions named \code{onMouseDown}, \code{onMouseMove},
+\code{onMouseUp}, \code{onKeybd}, and \code{onIdle}, and use them as
+event handlers.  It will use
 \code{prompt} for a label on the graphics device.  Two other special names are
 \code{which}, which will identify the graphics device, and
 \code{result}, where the result of the last event
@@ -82,6 +86,24 @@ keys will have been processed, so \code{shift-a} will be passed as
      \item Function keys, passed as one of \code{"F1", "F2", ...}
 }
 
+The idle event handler \code{onIdle} should be a function with no
+arguments. If the function is undefined or \code{NULL}, then R will
+typically call a system function which (efficiently) waits for the next
+event to appear on a filehandle. Otherwise, the idle event handler will
+be called whenever the event queue of the graphics device was found to
+be empty, i.e. in an infinite loop. This feature is intended to allow
+animations to respond to user input, and could be CPU-intensive.
+Currently, \code{onIdle} is only implemented for \code{X11()} devices.
+
+Note that calling \code{Sys.sleep()} is not recommended within an idle
+handler - \code{Sys.sleep()} removes pending graphics events in order to
+allow users to move, close, or resize windows while it is executing.
+Events such as mouse and keyboard events occurring during
+\code{Sys.sleep()} are lost, and currently do not trigger the event
+handlers registered via \code{getGraphicsEvent} or
+\code{setGraphicsEventHandlers}.
+
+
 The event handlers are standard R functions, and will be executed as though called
 from the event environment.
 
@@ -108,8 +130,8 @@ event environment for the graphics device.
 }
 \author{Duncan Murdoch}
 \examples{
-# This currently only works on the Windows
-# and X11(type = "Xlib") screen devices...
+# This currently only works on the Windows, X11(type = "Xlib"), and
+# X11(type = "cairo") screen devices...
 \dontrun{
 savepar <- par(ask = FALSE)
 dragplot <- function(..., xlim = NULL, ylim = NULL, xaxs = "r", yaxs = "r") {
