@@ -1763,6 +1763,7 @@ setupScreenDevice(pDevDesc dd, gadesc *xd, double w, double h,
     dd->canGenMouseMove = TRUE;
     dd->canGenMouseUp = TRUE;
     dd->canGenKeybd = TRUE;
+    dd->canGenIdle = FALSE;
     dd->gettingEvent = FALSE;
 
     GA_xd = xd;
